--- a/style/index.css
+++ b/style/index.css
@@ -114,16 +114,21 @@
     margin-bottom: 10px;
 }
 
-button{
+#button{
     margin-top: 20px;
     border: none;
     background: rgb(165, 250, 165);
     height: 30px;
+    display: flex;
     font-family: "Roboto";
     font-weight: 500;
     max-width: 100%;
     width: 100%;
     cursor: pointer;
+    text-decoration: none;
+    color: #000;
+    justify-content: center;
+    align-items: center;
 }
 
 .loading{
